<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/signupanimationGif"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/speed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/signupsaimaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/SAIMA"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/signupbagsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/Bags"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/SIGNUP"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbagsText" />

    <TextView
        android:id="@+id/signupusernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Username"
        android:textAllCaps="true"
        android:textColor="#446173"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="358dp"
        android:layout_height="60dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupusernameText">

        <EditText
            android:id="@+id/signupusernameInputText"
            android:layout_width="342dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_bg"
            android:drawableEnd="@drawable/ic_account_circle_black_24dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textCapWords"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailid"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signupemailidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/EMAIL_ID_TEXT"
        android:textAllCaps="true"
        android:textColor="#446173"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textemail"
        android:layout_width="358dp"
        android:layout_height="60dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupemailidText">

        <EditText
            android:id="@+id/signupEmailInputText"
            android:layout_width="342dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_bg"
            android:drawableEnd="@drawable/ic_email_black_24dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailid"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signupphonenoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Phone_no"
        android:textAllCaps="true"
        android:textColor="#446173"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textemail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textphone"
        android:layout_width="358dp"
        android:layout_height="60dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupphonenoText">

        <EditText
            android:id="@+id/signupphoneInputText"
            android:layout_width="342dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_bg"
            android:drawableEnd="@drawable/ic_local_phone_black_24dp"
            android:fontFamily="sans-serif-light"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signuppasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/PASSWORD_TEXT"
        android:textAllCaps="true"
        android:textColor="#446173"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textphone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="358dp"
        android:layout_height="52dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuppasswordText"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/signuppasswordInputText"
            android:layout_width="342dp"
            android:layout_height="41dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signuprepasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Re_Enter_Password"
        android:textAllCaps="true"
        android:textColor="#446173"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rpassword"
        android:layout_width="358dp"
        android:layout_height="52dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuprepasswordText"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/signuprepasswordInputText"
            android:layout_width="342dp"
            android:layout_height="41dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            tools:ignore="LabelFor"
            android:paddingRight="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        android:drawableEnd="@drawable/ic_send_black_24dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/SIGN_UP"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rpassword" />

    <Button
        android:id="@+id/gotologinpage"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:background="@color/transparent"
        android:fontFamily="sans-serif"
        android:text="@string/Login"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />

</androidx.constraintlayout.widget.ConstraintLayout>